@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
+cd ../
 javac lib/launcher/*.java
 jar cvfe bin/non.jar Main -C lib/launcher/ .
 jar fu bin/non.jar lib/gradle/* lib/platforms/* lib/resources/* lib/VERSION
